# eu_motor

./: .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile  build_docker.sh  run_docker.sh
example/: CMakeLists.txt  test_csp_mode.cpp  test_cst_mode.cpp  test_csv_mode.cpp  test_ip_mode.cpp  test_loop_pp_mode.cpp  test_pdo.cpp  test_pp_mode.cpp  test_pt_mode.cpp  test_pv_mode.cpp  test_read.cpp  test_two_device_read.cpp
include/: eu_motor.h
ros2_ws/install/eyou_robot_control/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: eyou_robot_control
ros2_ws/install/eyou_robot_control/share/ament_index/resource_index/package_run_dependencies/: eyou_robot_control
ros2_ws/install/eyou_robot_control/share/eyou_robot_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/eyou_robot_control/share/eyou_robot_control/cmake/: eyou_robot_controlConfig.cmake
ros2_ws/install/eyou_robot_control/share/eyou_robot_control/config/: eyou_controllers.yaml
ros2_ws/install/eyou_robot_control/share/eyou_robot_control/launch/: eyou_control.launch.py
ros2_ws/install/eyou_robot_control/share/eyou_robot_control/urdf/: eyou_robot.urdf.xacro
ros2_ws/log/: latest_build
ros2_ws/src/eyou_robot_control/: CMakeLists.txt  build.sh  eyou_system_interface.xml  package.xml
ros2_ws/src/eyou_robot_control/config/: eyou_controllers.yaml
ros2_ws/src/eyou_robot_control/include/eyou_robot_control/: eyou_system_interface.hpp
ros2_ws/src/eyou_robot_control/launch/: eyou_control.launch.py
ros2_ws/src/eyou_robot_control/src/: eyou_system_interface.cpp
ros2_ws/src/eyou_robot_control/tests/: test_arm.py
ros2_ws/src/eyou_robot_control/urdf/: eyou_robot.urdf.xacro
src/: CMakeLists.txt  eu_motor.cpp  test_suite.cpp
